welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: value toIn is not a member of String
		val decalage = litMessage().toIn
                                            ^